--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -95,7 +95,7 @@ labels:
     description: Active Transportation and Street Design
   - name: "Workgroup: CTM"
     color: 00BFA5
-    description: Communications & Technology Management
+    description: Communications and Technology Management
   - name: "Workgroup: DTS"
     color: 00BFA5
     description: Data and Technology Services
@@ -131,7 +131,7 @@ labels:
     description: Systems Development Division
   - name: "Workgroup: SMB"
     color: 00BFA5
-    description: Signs and Markings (and Banners)
+    description: Signs, Markings, and Banners
   - name: "Workgroup: TE"
     color: 00BFA5
     description: Transportation Engineering
