--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -8,19 +8,15 @@ labels:
   - name: "Impact: 1-Severe"
     color: FF7261
     description: Severely impacts ATD service delivery
-    oldname: "Impact: Severe"
   - name: "Impact: 2-Major"
     color: FF9A8E
     description: Causes a major interruption of ATD service delivery
-    oldname: "Impact: Major"
   - name: "Impact: 3-Minor"
     color: FFCDCA
     description: Deteriorates ATD service delivery
-    oldname: "Impact: Minor"
   - name: "Impact: 4-None"
     color: FFEEED
     description: Does not affect ATD service delivery
-    oldname: "Impact: None"
   - name: "Need: 1-Must Have"
     color: FF7261
     description: No point in delivering a solution without this
@@ -45,7 +41,6 @@ labels:
   - name: "Team: PM"
     color: F2FC6D
     description: Product and project management
-    oldname: "Team: Pro"
   - name: "Type: Bug Report"
     color: 0B3E79
     description: Something is not right
@@ -55,7 +50,6 @@ labels:
   - name: "Type: Data"
     color: 0B3E79
     description: Generating and delivering datasets and reports
-    oldname: "Type: Data & Reports"
   - name: "Type: Documentation"
     color: 0B3E79
     description: User guides, developer documentation, planning documents, etc.
@@ -97,7 +91,7 @@ labels:
     description: Active Transportation and Street Design
   - name: "Workgroup: CTM"
     color: 00BFA5
-    description: Communications & Technology Management
+    description: Communications and Technology Management
   - name: "Workgroup: DTS"
     color: 00BFA5
     description: Data and Technology Services
@@ -133,7 +127,7 @@ labels:
     description: Systems Development Division
   - name: "Workgroup: SMB"
     color: 00BFA5
-    description: Signs and Markings (and Banners)
+    description: Signs, Markings, and Banners
   - name: "Workgroup: TE"
     color: 00BFA5
     description: Transportation Engineering
