--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -131,6 +131,6 @@ labels:
   - name: "Workgroup: TE"
     color: 00BFA5
     description: Transportation Engineering
-  - name: "Test label"
+  - name: "Test label again"
     color: 00BFA5
-    description: See if this works
+    description: Plz work
