--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "matx-react",
+  "name": "atd-moped",
   "version": "1.0.0",
+  "homepage": "./",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:cityofaustin/atd-moped.git"
+  },
   "dependencies": {
     "@date-io/core": "^1.3.13",
     "@date-io/date-fns": "^1.3.6",
