--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-highlight": "^0.12.0",
+    "react-hook-form": "^6.8.1",
     "react-html-parser": "^2.0.2",
     "react-infinite-scroller": "^1.2.4",
     "react-loadable": "^5.5.0",
@@ -80,9 +81,9 @@
     "axios-mock-adapter": "^1.17.0",
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^5.2.0",
-    "customize-cra": "^0.9.1",
+    "customize-cra": "^1.0.0",
     "eslint-plugin-react-hooks": "0.0.0-8d7535e54",
     "gh-pages": "^2.1.1",
-    "react-app-rewired": "^2.1.5"
+    "react-app-rewired": "^2.1.6"
   }
 }
