Renames master for main

--- a/.github/workflows/atd_cognito_hooks_build.yml
+++ b/.github/workflows/atd_cognito_hooks_build.yml
@@ -6,7 +6,7 @@ name: "Build & Publish Cognito Hooks"
 on:
   push:
     branches:
-      - master
+      - main
       - production
     paths:
       - "moped-auth/**"
