--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -16,6 +16,8 @@
     "@material-ui/lab": "^4.0.0-alpha.22",
     "@material-ui/pickers": "^3.2.2",
     "autosuggest-highlight": "^3.1.1",
+    "aws-amplify": "^3.0.23",
+    "aws-amplify-react": "^4.1.22",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "clsx": "^1.0.4",
@@ -25,6 +27,7 @@
     "downshift": "^3.2.10",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
+    "env-cmd": "^10.1.0",
     "firebase": "^6.6.1",
     "globalize": "^0.1.1",
     "history": "^4.10.0",
@@ -60,8 +63,14 @@
     "victory": "^32.3.3"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build && cp _redirects build && cp -r build moped && mv moped build",
+    "start": "env-cmd -e local npm run start:local",
+    "start:local": "export HTTPS=true && react-app-rewired start",
+    "start:staging": "env-cmd -e staging npm run start:local",
+    "start:production": "env-cmd -e production npm run start:local",
+    "build": "env-cmd -e local npm run build:local",
+    "build:local": "GENERATE_SOURCEMAP=false react-scripts build && cp _redirects build && cp -r build moped && mv moped build",
+    "build:staging": "env-cmd -e staging npm run build:local",
+    "build:production": "env-cmd -e production npm run build:local",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "ghp": "react-scripts build && gh-pages -d build"
