Renames workflow for Moped API

--- a/.github/workflows/atd_moped_api.yml
+++ b/.github/workflows/atd_moped_api.yml
@@ -1,7 +1,7 @@
 #
 # Builds Cognito Triggers for Moped Authentication
 #
-name: "Build & Publish the Moped API"
+name: "Build & Publish Moped API"
 
 on:
   push:
