Updates MOPED API and installs zappa

--- a/.github/workflows/atd_moped_api.yml
+++ b/.github/workflows/atd_moped_api.yml
@@ -8,8 +8,8 @@ on:
     branches:
       - main
       - production
-    paths:
-      - "moped-api/**"
+#    paths:
+#      - "moped-api/**"
 
 jobs:
   build:
@@ -27,7 +27,7 @@ jobs:
       - name: "Install AWS Cli"
         run: |
           sudo apt-get install python3-setuptools
-          pip3 install awscli boto3
+          pip3 install awscli boto3 zappa
       # Run the shell commands using the AWS environment variables
       - name: "Build"
         env:
