Adds virtual environment to MOPED API pipeline

--- a/.github/workflows/atd_moped_api.yml
+++ b/.github/workflows/atd_moped_api.yml
@@ -27,7 +27,7 @@ jobs:
       - name: "Install AWS Cli"
         run: |
           sudo apt-get install python3-setuptools
-          pip3 install awscli boto3 zappa
+          pip3 install awscli boto3 zappa virtualenv
       # Run the shell commands using the AWS environment variables
       - name: "Build"
         env:
