Re-establishes build path rules for Moped API

--- a/.github/workflows/atd_moped_api.yml
+++ b/.github/workflows/atd_moped_api.yml
@@ -8,8 +8,8 @@ on:
     branches:
       - main
       - production
-#    paths:
-#      - "moped-api/**"
+    paths:
+      - "moped-api/**"
 
 jobs:
   build:
