--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -15,6 +15,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.22",
     "@material-ui/pickers": "^3.2.2",
+    "apollo-boost": "^0.4.9",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
@@ -27,6 +28,8 @@
     "echarts-for-react": "^2.0.15-beta.0",
     "firebase": "^6.6.1",
     "globalize": "^0.1.1",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "history": "^4.10.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
@@ -34,6 +37,7 @@
     "prop-types": "^15.7.2",
     "qwest": "^4.5.0",
     "react": "^16.8.6",
+    "react-apollo": "^3.1.5",
     "react-autosuggest": "^9.4.3",
     "react-beautiful-dnd": "^11.0.4",
     "react-big-calendar": "^0.24.0",
