--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "devDependencies": {
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.6"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.2.0",
+    "graphql": "^15.3.0"
   }
 }
