--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -8,6 +8,7 @@
     "url": "git@github.com:cityofaustin/atd-moped.git"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.1",
     "@date-io/core": "^1.3.13",
     "@date-io/date-fns": "^1.3.6",
     "@material-ui/codemod": "^4.5.0",
@@ -15,12 +16,14 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.22",
     "@material-ui/pickers": "^3.2.2",
+    "apollo": "^2.31.0",
     "apollo-boost": "^0.4.9",
     "autosuggest-highlight": "^3.1.1",
     "aws-amplify": "^3.0.23",
     "aws-amplify-react": "^4.1.22",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "client": "0.0.1",
     "clsx": "^1.0.4",
     "cross-fetch": "^3.0.4",
     "css-vars-ponyfill": "^2.1.2",
@@ -35,6 +38,7 @@
     "graphql-tag": "^2.11.0",
     "history": "^4.10.0",
     "lodash": "^4.17.15",
+    "material-table": "^1.69.1",
     "node-sass": "^4.13.1",
     "notistack": "^0.8.8",
     "prop-types": "^15.7.2",
@@ -44,7 +48,7 @@
     "react-autosuggest": "^9.4.3",
     "react-beautiful-dnd": "^11.0.4",
     "react-big-calendar": "^0.24.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-highlight": "^0.12.0",
     "react-hook-form": "^6.8.1",
@@ -69,7 +73,7 @@
   },
   "scripts": {
     "start": "env-cmd -e local npm run start:local",
-    "start:local": "export HTTPS=true && react-app-rewired start",
+    "start:local": "react-app-rewired start",
     "start:staging": "env-cmd -e staging npm run start:local",
     "start:production": "env-cmd -e production npm run start:local",
     "build": "env-cmd -e local npm run build:local",
