--- a/moped-editor/.gitignore
+++ b/moped-editor/.gitignore
@@ -18,6 +18,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 npm-debug.log*
 yarn-debug.log*
