--- a/.github/workflows/atd_moped_database.yml
+++ b/.github/workflows/atd_moped_database.yml
@@ -8,8 +8,10 @@ on:
     branches:
       - main
       - production
+      - 4106-sg-hasuradb
     paths:
       - "moped-database/**"
+      - ".github/workflows/**"
 
 jobs:
   build:
