--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -235,6 +235,56 @@
 - table:
     schema: public
     name: moped_users
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - staff_uuid
+      - first_name
+      - last_name
+      - title
+      - workgroup
+      - user_id
+      - workgroup_id
+      - cognito_user_id
+      - date_added
+      - is_coa_staff
+      - status_id
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - is_coa_staff
+      - status_id
+      - user_id
+      - workgroup_id
+      - first_name
+      - last_name
+      - title
+      - workgroup
+      - date_added
+      - cognito_user_id
+      - staff_uuid
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - is_coa_staff
+      - status_id
+      - user_id
+      - workgroup_id
+      - first_name
+      - last_name
+      - title
+      - workgroup
+      - date_added
+      - cognito_user_id
+      - staff_uuid
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_workgroup
