Adds moped-admin to moped_categories

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -1,6 +1,44 @@
 - table:
     schema: public
     name: moped_categories
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - category_name
+      - category_id
+      - active_category
+      - on_street
+      - sensitivity
+      - category_order
+      - date_added
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - active_category
+      - on_street
+      - sensitivity
+      - category_id
+      - category_order
+      - category_name
+      - date_added
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - active_category
+      - on_street
+      - sensitivity
+      - category_id
+      - category_order
+      - category_name
+      - date_added
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_city_fiscal_years
