Adds moped-admin to moped_milestones

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -124,6 +124,38 @@
 - table:
     schema: public
     name: moped_milestones
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - milestone_name
+      - milestone_description
+      - milestone_order
+      - required_milestone
+      - milestone_id
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - required_milestone
+      - milestone_id
+      - milestone_order
+      - milestone_description
+      - milestone_name
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - required_milestone
+      - milestone_id
+      - milestone_order
+      - milestone_description
+      - milestone_name
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_phases
