--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -121,6 +121,29 @@
 - table:
     schema: public
     name: moped_group
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - group_id
+      - group_name
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - group_id
+      - group_name
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - group_id
+      - group_name
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_milestones
