Adds moped-admin to moped_proj_fiscal_years

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -238,6 +238,47 @@
 - table:
     schema: public
     name: moped_proj_fiscal_years
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - fiscal_year_name
+      - fiscal_year_start
+      - fiscal_year_end
+      - budget_total
+      - expenses_total
+      - budget_available_at_end
+      - project_id
+      - date_added
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - fiscal_year_end
+      - fiscal_year_start
+      - budget_available_at_end
+      - budget_total
+      - expenses_total
+      - project_id
+      - fiscal_year_name
+      - date_added
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - fiscal_year_end
+      - fiscal_year_start
+      - budget_available_at_end
+      - budget_total
+      - expenses_total
+      - project_id
+      - fiscal_year_name
+      - date_added
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_proj_fund_opp
