Adds moped-admin to moped_entity

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -83,6 +83,41 @@
 - table:
     schema: public
     name: moped_entity
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - entity_uuid
+      - workgroup_name
+      - abbreviated_name
+      - entity_id
+      - affiliated_workgroup
+      - date_added
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - affiliated_workgroup
+      - entity_id
+      - abbreviated_name
+      - workgroup_name
+      - date_added
+      - entity_uuid
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - affiliated_workgroup
+      - entity_id
+      - abbreviated_name
+      - workgroup_name
+      - date_added
+      - entity_uuid
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_fund_opp
