--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -392,6 +392,50 @@
 - table:
     schema: public
     name: moped_proj_components
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - moped_project_id
+      - moped_component_id
+      - component_length
+      - component_notes
+      - component_unique_id
+      - component_unique_id_code
+      - date_added
+      - moped_proj_component_id
+      - added_by
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - added_by
+      - moped_component_id
+      - moped_proj_component_id
+      - moped_project_id
+      - component_length
+      - component_notes
+      - component_unique_id
+      - component_unique_id_code
+      - date_added
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - added_by
+      - moped_component_id
+      - moped_proj_component_id
+      - moped_project_id
+      - component_length
+      - component_notes
+      - component_unique_id
+      - component_unique_id_code
+      - date_added
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_proj_dates
