--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -495,6 +495,47 @@
 - table:
     schema: public
     name: moped_proj_entities
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - project_sponsors
+      - project_groups
+      - partners
+      - workgroups
+      - project_personnel
+      - entity_list_id
+      - project_id
+      - date_added
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - partners
+      - project_personnel
+      - project_sponsors
+      - project_groups
+      - entity_list_id
+      - project_id
+      - workgroups
+      - date_added
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - partners
+      - project_personnel
+      - project_sponsors
+      - project_groups
+      - entity_list_id
+      - project_id
+      - workgroups
+      - date_added
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_proj_financials
