Adds moped-admin to moped_proj_groups

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -721,6 +721,41 @@
 - table:
     schema: public
     name: moped_proj_groups
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - group_name
+      - proj_group_id
+      - project_id
+      - group_id
+      - date_added
+      - added_by
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - added_by
+      - group_id
+      - proj_group_id
+      - project_id
+      - group_name
+      - date_added
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - added_by
+      - group_id
+      - proj_group_id
+      - project_id
+      - group_name
+      - date_added
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_proj_location
