--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -759,6 +759,41 @@
 - table:
     schema: public
     name: moped_proj_location
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - location_name
+      - shape
+      - location_notes
+      - location_id
+      - project_id
+      - feature_id
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - location_id
+      - project_id
+      - feature_id
+      - location_name
+      - location_notes
+      - shape
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - location_id
+      - project_id
+      - feature_id
+      - location_name
+      - location_notes
+      - shape
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_proj_milestones
