--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -900,6 +900,41 @@
 - table:
     schema: public
     name: moped_proj_partners
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - partner_name
+      - entity_id
+      - proj_partner_id
+      - project_id
+      - date_added
+      - added_by
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - added_by
+      - entity_id
+      - proj_partner_id
+      - project_id
+      - partner_name
+      - date_added
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - added_by
+      - entity_id
+      - proj_partner_id
+      - project_id
+      - partner_name
+      - date_added
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_proj_personnel
