Adds moped-admin to moped_proj_status_history

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -1121,6 +1121,68 @@
 - table:
     schema: public
     name: moped_proj_status_history
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - milestone_name
+      - milestone_description
+      - milestone_order
+      - milestone_start
+      - milestone_end
+      - milestone_length
+      - milestone_privacy
+      - is_current_milestone
+      - is_milestone_completed
+      - status_name
+      - project_status_history_id
+      - date_status_changed
+      - project_id
+      - date_added
+      - added_by
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - is_current_milestone
+      - is_milestone_completed
+      - milestone_privacy
+      - date_status_changed
+      - milestone_end
+      - milestone_start
+      - added_by
+      - milestone_length
+      - milestone_order
+      - project_id
+      - project_status_history_id
+      - milestone_description
+      - milestone_name
+      - status_name
+      - date_added
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - is_current_milestone
+      - is_milestone_completed
+      - milestone_privacy
+      - date_status_changed
+      - milestone_end
+      - milestone_start
+      - added_by
+      - milestone_length
+      - milestone_order
+      - project_id
+      - project_status_history_id
+      - milestone_description
+      - milestone_name
+      - status_name
+      - date_added
+      filter: {}
+      check: null
 - table:
     schema: public
     name: moped_proj_status_notes
